--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ jupyter==1.0.0
 jupyter-client==5.2.4
 jupyter-console==6.0.0
 jupyter-core==4.4.0
-jupyterhub==0.9.4
+jupyterhub>=0.9.6
 jupyterlab==0.35.4
 jupyterlab-server==0.2.0
 keepalive==0.5
